# webdriverbidi

./: .gitignore  Cargo.toml  LICENSE  README.md  curl.txt  links.txt  websocat.txt
.github/workflows/: rust.yml
cddl/: local.cddl  remote.cddl
examples/: basic.rs  history.rs  navigate.rs  session_management.rs  traverse_history.rs
src/: capabilities.rs  command_sender.rs  commands.rs  commands_tmp.rs  error.rs  events.rs  http_session.rs  lib.rs  message_handler.rs  session.rs
src/commands/: browser.rs  browsing_context.rs  error.rs  id.rs  input.rs  local.rs  network.rs  remote.rs  script.rs  session.rs  storage.rs  utils.rs  web_extension.rs
src/models/: local_old.rs  remote.rs  remote_old.rs
src/models/local/: browser.rs  browsing_context.rs  command_response.rs  common.rs  error_response.rs  event.rs  log.rs  message.rs  mod.rs  network.rs  result_data.rs  script.rs  session.rs  storage.rs  web_extension.rs
src/models/remote/: browser.rs  browsing_context.rs  command.rs  common.rs  input.rs  mod.rs  network.rs  script.rs  session.rs  storage.rs  web_extension.rs
src/webdriver/: capabilities.rs  session.rs
static/: beforeunload.html  default.html  test_storage_isolation.html
tests/: browser.rs  browsing_context.rs  utils.rs
