[package]
name = "webdriverbidi"
version = "0.1.0"
edition = "2021"
authors = ["Taha Hachana <tahahachana@gmail.com>"]
description = "A Rust library for browser automation using the WebDriver BiDi protocol. Webdriverbidi allows you to manage browser sessions, interact with pages, and listen to events through a WebSocket-based interface."
license = "MIT"
repository = "https://github.com/TahaHachana/webdriverbidi"

[dependencies]
tokio = { version = "1.42.0", features = ["full"] }
tokio-tungstenite = "0.26.1"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
futures = "0.3.31"
reqwest = { version = "0.12.9", features = ["json"] }
