[package]
name = "webdriverbidi"
version = "0.1.16"
edition = "2021"
authors = ["Taha Hachana <tahahachana@gmail.com>"]
description = "WebDriver BiDi client implementation in Rust."
license = "MIT"
repository = "https://github.com/TahaHachana/webdriverbidi"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
tokio-tungstenite = "0.26.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
futures = "0.3.31"
reqwest = { version = "0.12.12", default-features = false, features = ["json"] }
thiserror = "2.0.10"
log = "0.4.22"

[dev-dependencies]
simplelog = "0.12.2"
time = "0.3.37"
env_logger = "0.11.6"
base64 = "0.22.1"
ctor = "0.2.9"
anyhow = "1.0.95"
url = "2.5.4"
axum = "0.8.3"
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.2", features = ["fs"] }
